Fix some mobile layout issues on the experience page. Create a mixin for mobile and utilize it instead of having repetitive media queries all over the place.

--- a/_sass/experience.scss
+++ b/_sass/experience.scss
@@ -7,6 +7,10 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
+    @include mobile {
+      display: block;
+      height: auto;
+    }
   }
 
   .top {
@@ -17,10 +21,13 @@
     background-repeat: no-repeat;
     background-position: center 0;
     height: 60vh;
+    @include mobile {
+      height: 100vh;
+    }
   }
   .bottom {
     position: relative;
-    @media screen and (max-width: $breakpoint-small) {
+    @include mobile {
       padding: 0 30px 42px 30px;
     }
   }
@@ -31,7 +38,7 @@
       left: 50%;
       transform: translateX(-50%);
       bottom: 30px;
-      @media screen and (max-width: $breakpoint-small) {
+      @include mobile {
         bottom: -20px;
       }
     }
@@ -75,7 +82,7 @@
     font-size: 1.1em;
     opacity: .9;
     padding: 40px 0;
-    @media screen and (max-width: $breakpoint-small) {
+    @include mobile {
       max-width: 80vw;
     }
   }
@@ -103,15 +110,7 @@
       }
     }
   }
-  @media screen and (max-width: $breakpoint-small) {
-    .top {
-      height: 100%;
-    }
-
-    .bottom {
-      height: 100%;
-    }
-
+  @include mobile {
     .footer {
       height: 100%;
     }
@@ -120,7 +119,6 @@
       transform: translateY(0);
       top: 0%;
       width: 94vw;
-      height: 100%;
       padding: 80px 20px 40px 20px;
     }
     .study-carousel {
