--- a/_sass/mixins.scss
+++ b/_sass/mixins.scss
@@ -71,7 +71,7 @@
     font-size: 1.3em;
     text-align: center;
     background-color: white;
-    @media screen and (max-width: $breakpoint-small) {
+    @include mobile {
       position: absolute;
       top: 0;
       left: 0;
@@ -81,5 +81,11 @@
       max-height: 100%;
       overflow-y: auto;
     }
+  }
+}
+
+@mixin mobile {
+  @media screen and (max-width: $breakpoint-small) {
+    @content
   }
 }
